dynamodel_tests/tests/fails/attribute/invalid_table_key.rs
use dynamodel::Dynamodel;

#[derive(Dynamodel)]
#[dynamodel(table_key = "unknown")]
struct Video {
    id: String,
    author: String,
    uploaded_at: String,
}

fn main() {}
