dynamodel_tests/tests/fails/attribute/invalid_table_key.stderr
error[E0425]: cannot find function `unknown` in this scope
 --> tests/fails/attribute/invalid_table_key.rs:4:25
  |
4 | #[dynamodel(table_key = "unknown")]
  |                         ^^^^^^^^^ not found in this scope
